syntax = "proto3";

package storage;
import "google/protobuf/timestamp.proto";
import "User_schema.proto";

option go_package = "pb";
message User_FindByRollAndNameRequest {
    FindByRollAndNameQuery query = 1;
}

message FindByRollAndNameQuery {
    int64 Roll = 1;
    google.protobuf.Timestamp UpdatedAt = 2;
    repeated string Name = 3;
    
}

message User_FindByRollAndNameResponse {
    repeated User Users = 1;
}